# vein

./: .gitignore  README.md  pyproject.toml
src/knitweb_vein/: __init__.py  canonical.py  contract.py  crypto.py  executor.py  finfield.py  items.py
tests/interop/: test_contract_procedure_integration.py
tests/property/: test_contract_procedure_job.py
